--- a/spring-boot-app/src/main/resources/static/index.html
+++ b/spring-boot-app/src/main/resources/static/index.html
@@ -39,9 +39,8 @@
         };
 
         // --- API通信ロジック ---
-        const apiFetch = async (url, options = {}) => {
-            const headers = { 'Content-Type': 'application/json' }
-            const response = await fetch(url, { ...options, headers });
+        const apiFetch = async (url, options = {}, headers = {}) => {
+            const response = await fetch(url, { ...options, headers: { 'Content-Type': 'application/json', ...headers } });
             if (!response.ok) {
                 const errorData = await response.json();
                 throw new Error(errorData.error);
@@ -99,10 +98,7 @@
             const sessionData = Object.fromEntries(new URLSearchParams(window.location.hash.substring(1)));
             const accessToken = sessionData?.access_token;
             if (!accessToken) return;
-            const userData = await apiFetch('/api/auth/user', {
-                method: 'POST',
-                body: JSON.stringify({ accessToken })
-            });
+            const userData = await apiFetch('/api/auth/user', {}, { 'Authorization' : `Bearer ${accessToken}` });
             if (userData.email) sessionData.user = userData;
             localStorage.setItem('user_session', JSON.stringify(sessionData));
             window.location.href = '/memo.html';
