--- a/spring-boot-app/src/main/resources/static/index.html
+++ b/spring-boot-app/src/main/resources/static/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン | Spring Boot メモ帳</title>
-    <link rel="stylesheet" href="/assets/style.css">
-    <script src="/assets/common.js" defer></script>
-    <script src="/assets/index.js" defer></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/common.js" defer></script>
+    <script src="/index.js" defer></script>
 </head>
 <body>
     <div class="auth-container">
