--- a/spring-boot-app/src/main/resources/static/memo.html
+++ b/spring-boot-app/src/main/resources/static/memo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>メモ帳</title>
-    <link rel="stylesheet" href="/assets/style.css">
-    <script src="/assets/common.js" defer></script>
-    <script src="/assets/memo.js" defer></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/common.js" defer></script>
+    <script src="/memo.js" defer></script>
 </head>
 <body>
     <div class="memo-container">
