--- a/spring-boot-app/src/main/resources/static/memo.html
+++ b/spring-boot-app/src/main/resources/static/memo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>メモ帳</title>
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css">
     <script src="/common.js" defer></script>
     <script src="/memo.js" defer></script>
