--- a/spring-boot-app/src/main/resources/static/index.html
+++ b/spring-boot-app/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>ログイン | Spring Boot メモ帳</title>
+    <title>ログイン | FW APP メモ帳</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css">
     <script src="/common.js" defer></script>
